--- a/PFE.Application/PFE.Application.csproj
+++ b/PFE.Application/PFE.Application.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="3.1.1" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
