--- a/PFE.Application/PFE.Application.csproj
+++ b/PFE.Application/PFE.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MQTTnet" Version="3.1.1" />
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
 </Project>
